# ComfyUI-SAM3DBody_utills

./: .gitignore  .tracking  LICENSE  README.en.md  README.md  __init__.py  active_preset.ini  comfy-env-root.toml  comfy-test.toml  config.ini  install.py  prestartup_script.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: promote-results.yml  run-tests.yml
chara_settings_presets/: chibi.json  female.json  male.json  reset.json
docs/: DEVELOPER_GUIDE.en.md  DEVELOPER_GUIDE.md
docs/licenses/: LICENSE  THIRD_PARTY_NOTICES
nodes/: __init__.py  comfy-env.toml  preset_pack.py  server.py
nodes/editor/: __init__.py  body_preset_editor_node.py  character_editor_node.py  editor_api.py  editor_server.py  pose_editor_node.py  pose_plus_editor_node.py
nodes/processing/: __init__.py  birefnet_mask.py  export_animated.py  process.py  (+3 more)
tools/: build_animated_bvh.py  build_animated_fbx.py  build_rigged_bvh.py  build_rigged_fbx.py  extract_face_blendshapes.py  migrate_workflows.py  rebuild_vertex_jsons.py  rewire_body_preset_json.py  rewire_chara_json.py  strip_process_image_output.py  sync_presets_with_npz.py
wheels/: MANIFEST.txt  torch_cluster-1.6.3+cu130torch2.9-cp311-cp311-linux_aarch64.whl  torch_scatter-2.1.2+cu130torch2.9-cp311-cp311-linux_aarch64.whl  torch_sparse-0.6.18+cu130torch2.9-cp311-cp311-linux_aarch64.whl
workflows/: SAM3Dbody _QIE_VNCCSpose.json  SAM3Dbody_BVH.json  SAM3Dbody_BVHAnimation.json  SAM3Dbody_FBX.json  SAM3Dbody_FBXAnimation.json  SAM3Dbody_QIE_VNCCSpose.json  SAM3Dbody_image.json  SAM3Dbody_webUI.json
(+37 files in other folders)
